--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "description": "Minimal theme with balanced colors. From Space.",
     "version": "0.1.0",
     "publisher": "jwoelper",
+    "repository": {
+		"type": "git",
+		"url": "https://github.com/woelper/theme-lifeonmars.git"
+	},
     "engines": {
         "vscode": "^1.5.0"
     },
